<resources>
    <string name="app_name">IngoToHelper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid eMail</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_android_map_api_key">AIzaSyDl429i2gTUBTfld9J1GeHcLRZd5oCV0mE</string>
    <string name="people_near">People near</string>

    <string-array name="problems">
        <item>Error Log-In </item>
        <item>Problemes visualitazació (Indicar Dispositiu)</item>
        <item>Algu sha registrat amb el meu DNI</item>
        <item>Altres</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="chats">Chats</string>
    <string name="notification">Notifications</string>
    <string name="Carrer">Street</string>
    <string name="Ciutat">City</string>
    <string name="Codipostal">PostalCode</string>
    <string name="Cognom">Lastname</string>
    <string name="Correu">eMail</string>
    <string name="Password">Password</string>
    <string name="Registrar">Register</string>
    <string name="SegonCognom">MiddleName</string>
    <string name="afegirFoto">Upload Photo</string>
    <string name="altres">Others</string>
    <string name="configuraci">Settings</string>
    <string name="dni">NIF</string>
    <string name="addFill">add Children</string>
    <string name="Guardar">Save</string>
    <string name="Borrar" >Delete</string>
    <string name="exit">Log Out</string>
    <string name="gestio_fills">Child Managment</string>
    <string name="nom">Name</string>
    <string name="perfil">Profile</string>
    <string name="sobre_nosaltres">About Us</string>
    <string name="telefon">Phone</string>
    <string name="tickets">Tickets</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
</resources>
